[package]
name = "act-zero"
version = "0.4.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Ergonomic actor system"
repository = "https://github.com/Diggsey/act-zero"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default-tokio = ["tokio"]
default-async-std = ["async-std"]
default-disabled = []
nightly = []
tracing = ["tynm"]

[dependencies]
futures = "0.3.19"
async-trait = "0.1.52"
log = "0.4.14"
tokio = { version = "1.15.0", features = ["time", "net", "rt-multi-thread"], optional = true }
async-std = { version = "1.10.0", optional = true }
tynm = { version = "0.1.6", optional = true }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros", "time"] }
async-std = { version = "1.10.0", features = ["attributes"] }

[[example]]
name = "using_tokio"
required-features = ["tokio"]

[[example]]
name = "using_async_std"
required-features = ["async-std"]

[[example]]
name = "using_global_runtime"

[[example]]
name = "using_provided_runtime"

[[example]]
name = "using_timers"
required-features = ["tokio"]


[[example]]
name = "printer"
required-features = ["tokio"]
